--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Test js</title>
-	<script src="variable.js"></script>
+	<script src="variables.js"></script>
 </head>
 <body>
 
